<resources>
    <string name="app_name">ChemistryApp</string>
    <string name="title_activity_main_menu">Chem App</string>
    <string name="title_activity_period_table">Period Table</string>
    <string name="title_activity_element_details">Element Details</string>
    <string name="action_settings">Settings</string>
    <string name="lblElementDetailsStr">Element Details</string>
    <string name="lblNameStr">Name</string>
    <string name="lblAtomicNumberStr">Atomic Number</string>
    <string name="lblAtomicWeightStr">Atomic Weight</string>
    <string name="lblGroupStr">Group</string>
    <string name="lblPeriodStr">Period</string>
    <string name="lblSymbolStr">Symbol</string>
    <string name="lblElectronConfigStr">Electron Configuration</string>
    <string name="lblAmountStr">Amount:</string>
    <string name="lblOptionsStr">Options:</string>
    <string-array name="spnAddOptionsArr">
        <item>@string/spnOptionsMolesStr</item>
        <item>@string/spnOptionsGramsStr</item>
    </string-array>
    <string name="spnOptionsMolesStr">Add in Moles</string>
    <string name="spnOptionsGramsStr">Add in Grams</string>
    <string name="btnAddtoFormulaStr">Add to Formula</string>
    <string name="btnMainMenuStr">Back to Main Menu</string>
    <string name="btnMolesCalculatorStr">Moles Calculator</string>
    <string name="btnGramsCalculatorStr">Grams Calculator</string>
    <string name="btnPeriodicTableStr">Periodic Table</string>
    <string name="btnEquationBalancerStr">Equation Balancer</string>
    <string name="btnCancelStr">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
</resources>